# Offiice_Autos

./: .gitignore  .~lock.data.xlsx#  README.md  docx_input.py  package-lock.json  requirements.txt  spare.txt  template.docx
.github/workflows/: build-electron.yml  build.yaml  build.yml  tauri-build.yml  templator.yml
.github/workflows/spare_build_files/: build-electron.yml  build.yml
Docx_template_generator/: Untitled 1.xlsx  data.csv  data.xlsx  requirements.txt  spare.js
NestedFolderTreePOC/: app.js  index.html
NestedFolderTreePOC/public/: test-file-tree.html  tree-test.js
cargo_works/FileCanvas/: README.md  package-lock.json  package.json
cargo_works/FileCanvas/src/: index.html  main.js  output.css
cargo_works/FileCanvas/src-tauri/: Cargo.toml  tauri.conf.json
cargo_works/Templator X/: README.md  package-lock.json  package.json
cargo_works/Templator X/new folder test/: Alice Johnson.docx  Bob Smith.docx  Charlie Davis.docx  output_2.docx
cargo_works/Templator X/results/: Alice Johnson.docx  Bob Smith.docx  Charlie Davis.docx  output_1.docx  output_2.docx  output_3.docx
cargo_works/Templator X/src/: app.js  index.html  main.js  output.css
cargo_works/TemplatorX/: README.md  package.json
cargo_works/TemplatorX/new folder test/: Alice Johnson.docx  output_1.docx  output_3.docx
cargo_works/TemplatorX/src-tauri/: Cargo.toml  tauri.conf.json
filemovers/: main.js  package-lock.json  package.json  preload.js
filemovers-electron-backup/: README.md  pre_app.js
filemovers/public/: app.js  index.html  style.css
filemovers/public/js/: main.js  (+6 more)
(+40 files in other folders)
