[package]
name = "templator-x"
version = "0.1.0"
description = "A Tauri App"
authors = ["Butterman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "templator_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.5.0"
csv = "1.4.0"
calamine = "0.32.0"
docx-template = "0.2.7"
tauri-plugin-fs = "2.4.5"
tokio = "1.49.0"
base64 = "0.22.1"


